--- a/my-app/src/style.scss
+++ b/my-app/src/style.scss
@@ -34,8 +34,9 @@ h2 {
 }
 
 .wrappers {
-  padding: 0 20%;
+  padding: 0 18%;
 }
+
 .align-center {
   align-items: center;
 }
@@ -80,12 +81,14 @@ h2 {
 // ready to use
 // font-family: 'Montserrat', sans-serif;
 
+// *****************************************************
+// *****************************************************
 // HEADER
 .nav-container {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  min-height: 45px;
+  min-height: 50px;
   background-color: #0f2131;
   color: #ffffff;
   padding: 0 20%;
@@ -135,9 +138,11 @@ h2 {
   }
 }
 
+// *****************************************************
+// *****************************************************
 // jumbotron
 #jumbo {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
     url("../assets/img/bg-9.jpg");
@@ -221,6 +226,7 @@ h2 {
   width: 170px;
   font-weight: 500;
   font-size: 17px;
+  color: #ffffff;
 }
 
 .btn-empty:hover {
@@ -266,28 +272,29 @@ h2 {
   transition: ease-out 0.5s;
 }
 
+// *****************************************************
+// *****************************************************
 // ABOUT SECTION
 
 #section-about {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 60vh;
 }
 
 #section-about > div {
-  height: 100%;
+  flex-wrap: wrap;
+  margin-top: 80px;
 }
 
 //  about left
 #about-left {
-  width: 38%;
-  height: 65%;
+  width: 50%;
   padding-right: 50px;
 }
 
 #about-left > span,
 #about-left > h2,
 #about-left > p {
-  display: block;
   margin-bottom: 20px;
 }
 
@@ -307,53 +314,26 @@ h2 {
   list-style: disc;
 }
 
-//   about right
-.certificate img {
-  width: 100px;
+.plan-box {
+    height: 600px;
+    width: 500px;
+    background-color: red;
 }
 
-#about-right {
-  height: 70%;
-  width: 25%;
-}
 
-#about-right .vehicle {
-  padding: 10px 0;
-}
-
-#about-right .border {
-  border-bottom: 1px solid rgba(169, 169, 169, 0.625);
-  border-top: 1px solid rgba(169, 169, 169, 0.625);
-}
-
-#about-right > h3 {
-  display: block;
-  margin-bottom: 23px;
-}
-
-#about-right .truck {
-  padding: 5px;
-  background-color: #5296bb25;
-  margin-right: 5px;
-}
-
-#about-right .truck-info {
-  margin-left: 20px;
-}
-
-#about-right .certifications {
-  margin: 30px 0;
-}
-
-#about-right .certificate img {
-  margin: 20px 20px 0 0;
-}
-
-/* section SERVICES */
+// *****************************************************
+// *****************************************************
+/* SERVICES */
 #section-services {
-  width: 100vw;
-  height: 95vh;
+  width: 100%;
+  height: 80vh;
 }
+
+.container-services{
+    display: flex;
+    flex-wrap: wrap;
+}
+
 #section-services > div {
   height: 40%;
 }
